--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>Home</title>
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='style.css') }}">
 </head>
 <body>
-    <h1>Welcome to the home page!</h1>
+    <h1>Welcome Home!</h1>
+
 </body>
 </html>
