--- a/templates/student.html
+++ b/templates/student.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>Student</title>
@@ -6,5 +6,12 @@
 </head>
 <body>
     <h1>This is the page for the student with id {{ id_number }}.</h1>
+    <ul>
+    	<li> This is {{student.name}}</li>
+    	<li> He is in {{student.year}} year</li>
+    	<li> Student's status of lab: {{student.finished_lab}}</li>
+    </ul>
+
+    <a href = "{{url_for('home')}}">Back to home</a>
 </body>
 </html>
